--- a/src/components/Stat.module.scss
+++ b/src/components/Stat.module.scss
@@ -5,6 +5,11 @@
   // left: 0;
   // text-align: center;
 }
+.options {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
 .container {
   display: flex;
   // margin: 0;
